Disable artwork drag

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
     <div id="songinfo">
         <!--Artwork icon: Music by Trident from the Noun Project-->
-        <img id="artowrkimg" src="./images/artwork.png" />
+        <img id="artowrkimg" ondragstart="return false;" src="./images/artwork.png" />
         <div id="infotext">
             <div id="songtitle">
 
