use custom script for getting song info from Tidal

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 
     <div id="lyricsbox">
         <div id="lyrics">
-            Tidal is paused.
+            Loading...
         </div>
 
     </div>
